@@ -1,3 +1,8 @@
+2002-02-10  Bruno Haible  <bruno@clisp.org>
+
+	* localename.c: Change copyright notice from GPL to LGPL.
+	* eval-plural.h: Likewise.
+
 2002-02-11  Bruno Haible  <bruno@clisp.org>
 
 	* config.charset: Add support for NetBSD.
